# gst-plugin-metadata

./: CMakeLists.txt  README.md  vcpkg.json.in
source/: config.h  gst_plugin.cpp  gstmetadata.cpp  main.cpp
source/extractor/: gst_metadata_extractor.cpp  gstmetadataextractor.cpp  gstmetadataextractor.h
source/injector/: gst_metadata_injector.cpp  gstmetadatainjector.cpp  gstmetadatainjector.h
source/metadata/: gst_meta.cpp  gst_meta.h
